// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout renders condensed layout 1`] = `
<div>
  <div
    class="PageLayoutRoot"
    style="--sticky-pane-height: 100vh; --spacing: var(--spacing-condensed);"
  >
    <div
      class="PageLayoutWrapper"
      data-width="xlarge"
    >
      <header
        class="Header"
        style="--spacing: var(--spacing-condensed);"
      >
        <div
          class="HeaderContent"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="HorizontalDivider HeaderHorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-condensed); --spacing: var(--spacing-condensed);"
        />
      </header>
      <div
        class="PageLayoutContent"
      >
        <main
          class="ContentWrapper"
          data-is-hidden="false"
        >
          <div />
          <div
            class="Content"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
          <div />
        </main>
        <div
          class="PaneWrapper"
          data-is-hidden="false"
          data-position="end"
          style="--offset-header: 0px; --spacing-row: var(--spacing-condensed); --spacing-column: var(--spacing-condensed);"
        >
          <div
            class="HorizontalDivider PaneHorizontalDivider"
            data-position="end"
            data-variant="none"
            style="--spacing-divider: var(--spacing-condensed); --spacing: var(--spacing-condensed);"
          />
          <div
            class="Pane"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="VerticalDivider PaneVerticalDivider"
            data-position="end"
            data-variant="none"
            style="--spacing: var(--spacing-condensed);"
          />
        </div>
      </div>
      <footer
        class="FooterWrapper"
        style="--spacing: var(--spacing-condensed);"
      >
        <div
          class="HorizontalDivider FooterHorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-condensed); --spacing: var(--spacing-condensed);"
        />
        <div
          class="FooterContent"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout renders default layout 1`] = `
<div>
  <div
    class="PageLayoutRoot"
    style="--sticky-pane-height: 100vh; --spacing: var(--spacing-normal);"
  >
    <div
      class="PageLayoutWrapper"
      data-width="xlarge"
    >
      <header
        class="Header"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="HeaderContent"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="HorizontalDivider HeaderHorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
      </header>
      <div
        class="PageLayoutContent"
      >
        <main
          class="ContentWrapper"
          data-is-hidden="false"
        >
          <div />
          <div
            class="Content"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
          <div />
        </main>
        <div
          class="PaneWrapper"
          data-is-hidden="false"
          data-position="end"
          style="--offset-header: 0px; --spacing-row: var(--spacing-normal); --spacing-column: var(--spacing-normal);"
        >
          <div
            class="HorizontalDivider PaneHorizontalDivider"
            data-position="end"
            data-variant="none"
            style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
          />
          <div
            class="Pane"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="VerticalDivider PaneVerticalDivider"
            data-position="end"
            data-variant="none"
            style="--spacing: var(--spacing-normal);"
          />
        </div>
      </div>
      <footer
        class="FooterWrapper"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="HorizontalDivider FooterHorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
        <div
          class="FooterContent"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout renders pane in different position when narrow 1`] = `
<div>
  <div
    class="PageLayoutRoot"
    style="--sticky-pane-height: 100vh; --spacing: var(--spacing-normal);"
  >
    <div
      class="PageLayoutWrapper"
      data-width="xlarge"
    >
      <header
        class="Header"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="HeaderContent"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="HorizontalDivider HeaderHorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
      </header>
      <div
        class="PageLayoutContent"
      >
        <main
          class="ContentWrapper"
          data-is-hidden="false"
        >
          <div />
          <div
            class="Content"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
          <div />
        </main>
        <div
          class="PaneWrapper"
          data-is-hidden="false"
          data-position="end"
          style="--offset-header: 0px; --spacing-row: var(--spacing-normal); --spacing-column: var(--spacing-normal);"
        >
          <div
            class="HorizontalDivider PaneHorizontalDivider"
            data-position="end"
            data-variant="none"
            style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
          />
          <div
            class="Pane"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="VerticalDivider PaneVerticalDivider"
            data-position="end"
            data-variant="none"
            style="--spacing: var(--spacing-normal);"
          />
        </div>
      </div>
      <footer
        class="FooterWrapper"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="HorizontalDivider FooterHorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
        <div
          class="FooterContent"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout renders with dividers 1`] = `
<div>
  <div
    class="PageLayoutRoot"
    style="--sticky-pane-height: 100vh; --spacing: var(--spacing-normal);"
  >
    <div
      class="PageLayoutWrapper"
      data-width="xlarge"
    >
      <header
        class="Header"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="HeaderContent"
          style="--spacing: var(--spacing-none);"
        >
          Header
        </div>
        <div
          class="HorizontalDivider HeaderHorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
      </header>
      <div
        class="PageLayoutContent"
      >
        <main
          class="ContentWrapper"
          data-is-hidden="false"
        >
          <div />
          <div
            class="Content"
            data-width="full"
            style="--spacing: var(--spacing-none);"
          >
            Content
          </div>
          <div />
        </main>
        <div
          class="PaneWrapper"
          data-is-hidden="false"
          data-position="start"
          style="--offset-header: 0px; --spacing-row: var(--spacing-normal); --spacing-column: var(--spacing-normal);"
        >
          <div
            class="HorizontalDivider PaneHorizontalDivider"
            data-position="start"
            data-variant="none"
            style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
          />
          <div
            class="Pane"
            style="--spacing: var(--spacing-none); --pane-min-width: 256px; --pane-max-width: calc(100vw - var(--pane-max-width-diff)); --pane-width-size: var(--pane-width-medium); --pane-width: 296px;"
          >
            Pane
          </div>
          <div
            class="VerticalDivider PaneVerticalDivider"
            data-position="start"
            data-variant="none"
            style="--spacing: var(--spacing-normal);"
          />
        </div>
      </div>
      <footer
        class="FooterWrapper"
        style="--spacing: var(--spacing-normal);"
      >
        <div
          class="HorizontalDivider FooterHorizontalDivider"
          data-variant="none"
          style="--spacing-divider: var(--spacing-normal); --spacing: var(--spacing-normal);"
        />
        <div
          class="FooterContent"
          style="--spacing: var(--spacing-none);"
        >
          Footer
        </div>
      </footer>
    </div>
  </div>
</div>
`;
